--- a/index.html
+++ b/index.html
@@ -6,9 +6,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haano</title>
+    <link rel="stylesheet" href="style/main.css">
 </head>
 
 <body>
+    <div class="head">
+        <h1>Haano</h1>
+    </div>
+    <div class="main">
+        <hr>
+
+        <h2>Моя музыка:</h2>
+        <p>Я записываю свою игру на <b>гитаре</b><br>
+            <a href="https://vk.com/audios74052007?z=audio_playlist74052007_2" target="_blank">Мои треки в социальной сети Вконтакте</a>
+            <hr>
+        </p>
+
+        <h2>Немного 3д моделированием:</h2>
+        <p>
+            <a tag="3d" href="Main.html" target="_blank">3D модель в браузере!</a>
+            <hr>
+        </p>
+
+
+
+
+
+        <form action="index.html">
+            <input type="text">
+            <input type="submit" value="Отправить">
+        </form>
+
+        <div class="osn">
+            <p>text</p>
+        </div>
+    </div>
+
+    <div class="test">
+        <h1>Обучение сайтостроению</h1>
+
+        <hr>
+        <em>Текст курсивом</em><br>
+        <hr>список:
+        <Ul>
+            <LI>1</LI>
+            <li>2</li>
+        </Ul>
+        <hr>таблица
+        <table>
+            <thead>
+                <tr>
+                    <th>Name wdawd</th>
+                    <th>Numer</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Apple</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>Apple</td>
+                    <td>3</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2">Itog 5
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+        <hr> картинка<br>
+        <img src="picture/1bec1c3d806ec24dba93da1195563f86.jpg" alt="" height="300">
+    </div>
 
 </body>
 
