--- a/index.html
+++ b/index.html
@@ -22,24 +22,11 @@
             <hr>
         </p>
 
-        <h2>Немного 3д моделированием:</h2>
+        <h2>Немного 3D моделирование:</h2>
         <p>
             <a tag="3d" href="Main.html" target="_blank">3D модель в браузере!</a>
             <hr>
         </p>
-
-
-
-
-
-        <form action="index.html">
-            <input type="text">
-            <input type="submit" value="Отправить">
-        </form>
-
-        <div class="osn">
-            <p>text</p>
-        </div>
     </div>
 
     <div class="test">
@@ -79,6 +66,16 @@
         </table>
         <hr> картинка<br>
         <img src="picture/1bec1c3d806ec24dba93da1195563f86.jpg" alt="" height="300">
+
+        <hr>input (строка ввода и кнопка)
+        <form action="index.html">
+            <input type="text">
+            <input type="submit" value="Отправить">
+        </form>
+        <hr> div+css оформление
+        <div class="osn">
+            <p>text</p>
+        </div>
     </div>
 
 </body>
