--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <hr>
         </p>
 
-        <h2>Немного 3D моделирование:</h2>
+        <h2>Немного 3D моделирования:</h2>
         <p>
             <a tag="3d" href="Main.html" target="_blank">3D модель в браузере!</a>
             <hr>
