--- a/index.html
+++ b/index.html
@@ -14,26 +14,47 @@
         <h1>Haano</h1>
     </div>
     <div class="main">
-        <hr>
 
         <h2>Моя музыка:</h2>
-        <p>Я записываю свою игру на <b>гитаре</b><br>
-            <a href="https://vk.com/audios74052007?z=audio_playlist74052007_2" target="_blank">Мои треки в социальной сети Вконтакте</a>
-            <hr>
+        <p>Я записываю свою игру на <b>гитаре</b><br><br>
+            <a href="https://vk.com/audios74052007?z=audio_playlist74052007_2" target="_blank" class="btn">Мои треки в социальной сети Вконтакте</a>
+
         </p>
 
         <h2>Немного 3D моделирования:</h2>
         <p>
-            <a tag="3d" href="Main.html" target="_blank">3D модель в браузере!</a>
-            <hr>
+            <a tag="3d" href="Main.html" target="_blank" class="btn">3D модель в браузере! </a>
         </p>
     </div>
 
     <div class="test">
         <h1>Обучение сайтостроению</h1>
 
+        <table>
+            <thead>
+                <tr>
+                    <th>Элемент</th>
+                    <th>Описание</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="todo.html" class="btn">TODO лист на vue</a></td>
+                    <td>2</td>
+                </tr>
+
+            </tbody>
+            <tfoot>
+
+            </tfoot>
+        </table>
+
+
+
+
         <hr>
         <em>Текст курсивом</em><br>
+        <b>Жирный текст</b><br>
         <hr>список:
         <Ul>
             <LI>1</LI>
