--- a/Main.html
+++ b/Main.html
@@ -6,18 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Document</title>
+    <title>3d</title>
 </head>
 
 <body>
+
     <script src="js/three.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script>
         const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x101000);
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        scene.background = new THREE.Color(0xffe6e6);
+        const camera = new THREE.PerspectiveCamera(74, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.rotation.y = 45 / 180 * Math.PI;
         camera.position.x = 4;
         camera.position.y = 2;
@@ -27,7 +27,7 @@
         nlight = new THREE.AmbientLight(0x404040, 100);
         scene.add(nlight);
 
-        light = new THREE.PointLight(0x111111, 10);
+        light = new THREE.PointLight(0x111111, 15);
         light.position.set(0, 300, 500);
         scene.add(light);
         light2 = new THREE.PointLight(0x111111, 10);
