--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <h2>Моя музыка:</h2>
         <p>Я записываю свою игру на <b>гитаре</b><br><br>
             <a href="https://vk.com/audios74052007?z=audio_playlist74052007_2" target="_blank" class="btn">Мои треки в социальной сети Вконтакте</a>
-
         </p>
 
         <h2>Немного 3D моделирования:</h2>
@@ -26,6 +25,10 @@
             <a tag="3d" href="Main.html" target="_blank" class="btn">3D модель в браузере! </a>
         </p>
     </div>
+
+
+    <!--****************************-->
+
 
     <div class="test">
         <h1>Обучение сайтостроению</h1>
@@ -40,9 +43,30 @@
             <tbody>
                 <tr>
                     <td><a href="todo.html" class="btn">TODO лист на vue</a></td>
-                    <td>2</td>
+                    <td>Copy-Paste</td>
                 </tr>
-
+                <tr>
+                    <td><img src="picture/1bec1c3d806ec24dba93da1195563f86.jpg" alt="" height="350"></td>
+                    <td>картинка</td>
+                </tr>
+                <tr>
+                    <td><em>Текст курсивом</em><br>
+                        <b>Жирный текст</b><br></td>
+                    <td>Работа с текстом</td>
+                </tr>
+                <tr>
+                    <td>
+                        <Ul>
+                            <LI>Элемент 1</LI>
+                            <li>Элемент 2</li>
+                        </Ul>
+                    </td>
+                    <td>Элементы списка</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>тест</td>
+                </tr>
             </tbody>
             <tfoot>
 
@@ -52,14 +76,9 @@
 
 
 
-        <hr>
-        <em>Текст курсивом</em><br>
-        <b>Жирный текст</b><br>
+
         <hr>список:
-        <Ul>
-            <LI>1</LI>
-            <li>2</li>
-        </Ul>
+
         <hr>таблица
         <table>
             <thead>
@@ -85,10 +104,7 @@
                 </tr>
             </tfoot>
         </table>
-        <hr> картинка<br>
-        <img src="picture/1bec1c3d806ec24dba93da1195563f86.jpg" alt="" height="300">
-
-        <hr>input (строка ввода и кнопка)
+        input (строка ввода и кнопка)
         <form action="index.html">
             <input type="text">
             <input type="submit" value="Отправить">
