--- a/Main.html
+++ b/Main.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 
 <html lang="en">
+<style type="text/css">
+    * {
+        margin: 0;
+        padding: 0;
+    }
+</style>
 
 <head>
     <meta charset="UTF-8">
