--- a/index.html
+++ b/index.html
@@ -64,53 +64,66 @@
                     <td>Элементы списка</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td>тест</td>
-                </tr>
-            </tbody>
-            <tfoot>
-
-            </tfoot>
-        </table>
-
-
-
-
-
-        <hr>таблица
-        <table>
-            <thead>
-                <tr>
-                    <th>Name wdawd</th>
-                    <th>Numer</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Apple</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>Apple</td>
-                    <td>3</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="2">Itog 5
+                    <td>
+                        <div class="table2">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Name wdawd</th>
+                                        <th>Numer</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Apple</td>
+                                        <td>2</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Apple</td>
+                                        <td>3</td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="2">Itog 5
+                                        </td>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
                     </td>
+                    <td>
+                        <hr>таблица</td>
                 </tr>
+                <tr>
+                    <td>
+                        <form action="index.html">
+                            <input type="text">
+                            <input type="submit" value="Отправить">
+                        </form>
+                    </td>
+                    <td>input (строка ввода и кнопка)</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="osn">
+                            <p>text</p>
+                        </div>
+                    </td>
+                    <td>div+css оформление</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+            <tfoot>
+
             </tfoot>
         </table>
-        input (строка ввода и кнопка)
-        <form action="index.html">
-            <input type="text">
-            <input type="submit" value="Отправить">
-        </form>
-        <hr> div+css оформление
-        <div class="osn">
-            <p>text</p>
-        </div>
+
+        <hr>
+
     </div>
 
 </body>
