--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
         <hr>
 
     </div>
+    <div class="jsdiv">
+
+        <!-- ************************************* -->
+
+        <h2>JavaScript</h2>
+        <script src="javascript/myjs.js"></script>
+    </div>
 
 </body>
 
